add - datetime in python

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <main>
-        <form class="form-info">
+        <form class="form-info" action="/post/menssagem" method="post">
 
             <label for="nome">Usuario</label>
-            <input type="text" name="nome" id="nome">
+            <input type="text" name="nome" id="nome" autocomplete="off">
 
             <label for="comentario">Comentarios</label>
-            <input class="comentario" type="text" name="comentario" id="comentario">
+            <input class="comentario" type="text" name="comentario" id="comentario" autocomplete="off">
 
             <div>
                 <button type="submit" class="btn-enviar">Enviar</button>
