--- a/static/style1.css
+++ b/static/style1.css
@@ -27,7 +27,14 @@ main{
 
 .form-info>input{
     width: 150px;
+    height: 40px;
+
+    padding: 10px;
+
     border-radius: 20px;
+
+    background-color: antiquewhite;
+    border: 0px;
 }
 .form-info>label{
     margin: 6px;
@@ -46,4 +53,6 @@ main{
     margin: 12px;
 
     border-radius: 25px;
+
+    background-color: transparent;
 }
