--- a/static/style1.css
+++ b/static/style1.css
@@ -18,7 +18,7 @@ main{
 .form-info{
     display: flex;
     
-    
+
     
     align-items: center;
     flex-direction: column;
@@ -54,4 +54,14 @@ main{
     border-radius: 25px;
 
     background-color: transparent;
+}
+
+.frases{
+    border: 6px solid black;
+
+    width: 100vw;
+    height: 100vh;
+
+    display:flex;
+    align-items: center;
 }
