--- a/static/style1.css
+++ b/static/style1.css
@@ -13,6 +13,12 @@ main{
 
     width: 100vw;
     height: 100vh;
+
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .form-info{
@@ -57,10 +63,10 @@ main{
 }
 
 .frases{
-    border: 6px solid black;
+    width: 300px;
+    height: 500px;
 
-    width: 100vw;
-    height: 100vh;
+    border: 2px solid black;
 
     display:flex;
     align-items: center;
