--- a/static/style1.css
+++ b/static/style1.css
@@ -8,11 +8,34 @@ html{
     overflow: hidden;
 }
 
+@keyframes slide{
+    0%{
+        background-image: url(../static/IMG/4k-Blood-Moon-Talon-Skin-League-of-Legends-4K-Wallpaper.jpg);
+    }
+    25%{
+        background-image: url(../static/IMG/FRfCDAwXsAAIV8n.jpg);
+    }
+    50%{
+        background-image: url(../static/IMG/talon.webp);
+    }
+    75%{
+        background-image: url(../static/IMG/thumb-1920-1347973.jpeg);
+    }
+    100%{
+        background-image: url(../static/IMG/4k-Blood-Moon-Talon-Skin-League-of-Legends-4K-Wallpaper.jpg);
+    }
+}
+
 main{
-    background-image: url(../static/IMG/talon.webp);
+    animation: slide 12s infinite;
+
+    background-repeat: no-repeat;
+    background-size: cover;
 
     width: 100vw;
     height: 100vh;
+
+    background-image: url();
 
     display: flex;
 
@@ -63,11 +86,27 @@ main{
 }
 
 .frases{
-    width: 300px;
+    width: 600px;
     height: 500px;
+
+    display: flex;
+    flex-direction: column;
 
     border: 2px solid black;
 
     display:flex;
     align-items: center;
+
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+    color: white;
+}
+.v1{
+    border: 4px solid black;
+
+    width: 100%;
+}
+.v1 button{
+    margin-top: 24px;
 }
