add - excluir mensagem

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             <div class="v1">
                 <h2>Usuario: {{mensagem.nome}}</h2>
                 <br>
-                <h2>Menssagem: {{mensagem.comentario}}</h2>
+                <h2>Mensagem: {{mensagem.comentario}}</h2>
 
                 <a href="/deleta_mensagem/{{mensagem.cod_comentario}}">Excluir</a>
                 <button>I Like</button>
