add - rota de curtidas

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,8 @@
                 <h2>Mensagem: {{mensagem.comentario}}</h2>
 
                 <a href="/deleta_mensagem/{{mensagem.cod_comentario}}">Excluir</a>
-                <button>I Like</button>
-                <button>not like</button>
+                <a href="">I Like: {{mensagem.curtidas}}</a>
+                <button>not like: </button>
             </div>
             {% endfor %}
         </div>
