--- a/static/style1.css
+++ b/static/style1.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+    text-decoration: none;
 }
 
 html{
@@ -87,12 +89,12 @@ main{
 
 .frases{
     width: 600px;
-    height: 500px;
+    height: 600px;
 
     display: flex;
     flex-direction: column;
 
-    border: 2px solid black;
+    border: 1px solid black;
 
     display:flex;
     align-items: center;
@@ -106,7 +108,12 @@ main{
     border: 4px solid black;
 
     width: 100%;
+
+    margin-top: 25px;
 }
-.v1 button{
-    margin-top: 24px;
+
+.v1 a{
+    background-color: aqua;
+
+    border-radius: 20px;
 }
