--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -10,8 +10,7 @@
 
 <body>
     <main>
-        <form action="/cadastra/usuario" method="get">
-            <div class="div-info">
+        <form action="/cadastra/usuario" method="post">
 
                 <label for="e-mail">E-mail</label>
                 <input type="text" name="e-mail" id="e-mail">
@@ -26,8 +25,6 @@
                     <button type="submit" class="btn-cadsatrar">Cadastrar</button>
                     <button type="reset" class="btn-cancelar">Cancelar</button>
                 </div>
-
-            </div>
         </form>
     </main>
 </body>
