add - cadastra usuario (funcional)

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -12,8 +12,8 @@
     <main>
         <form action="/cadastra/usuario" method="post">
 
-                <label for="e-mail">E-mail</label>
-                <input type="text" name="e-mail" id="e-mail">
+                <label for="login">E-mail</label>
+                <input type="text" name="login" id="e-mail">
 
                 <label for="usuario">Usuario</label>
                 <input type="text" name="usuario" id="usuario">
