--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <form class="form-info" action="/post/menssagem" method="post">
+        <form class="form-info" action="/post/mensagem" method="post">
 
             <label for="nome">Usuario</label>
             <input type="text" name="nome" id="nome" autocomplete="off">
