--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="../static/style2.css">
 </head>
 
 <body>
     <main>
+
         <form action="/cadastra/usuario" method="post">
 
-            <label for="login">E-mail</label>
-            <input type="text" name="login" id="e-mail">
+            <label for="login">Login</label>
+            <input type="text" name="login" id="login">
 
             <label for="usuario">Usuario</label>
             <input type="text" name="usuario" id="usuario">
@@ -24,6 +25,10 @@
             <div class="div-btn">
                 <button type="submit" class="btn-cadsatrar">Cadastrar</button>
                 <button type="reset" class="btn-cancelar">Cancelar</button>
+            </div>
+
+            <div>
+                <a class="ir-logar" href="/login">Ir para Login</a>
             </div>
             
         </form>
