--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <main>
-        <form>
+        <form action="/post/login" method="post">
+
             <label for="login">Login</label>
             <input type="text" name="login" id="login">
 
@@ -16,7 +17,7 @@
             <input type="text" name="senha" id="senha">
 
             <div class="btn-logar">
-                <button>Login</button>
+                <button type="submit">Login</button>
             </div>
             
         </form>
