--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <a class="deslogar" href="/logoutr">Deslogar</a>
     <main>
         <form class="form-info" action="/post/mensagem" method="post">
 
